// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "large", weight: semi-bold, align: left, color: notification-info, ellipsis: true and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  color: #2762EC !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) !important;
  font-weight: 600 !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(p), ::slotted(span), ::slotted(div), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", weight: bold, align: right, color: contrast-high, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  color: #AFB0B3 !important;
  text-align: right !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) !important;
  font-weight: 700 !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(p), ::slotted(span), ::slotted(div), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular, align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  color: #010205 !important;
  text-align: left !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: inherit !important;
  font-size: 1rem !important;
  font-weight: 400 !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(p), ::slotted(span), ::slotted(div), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"large","s":"medium","m":"inherit","l":"x-small","xl":"x-large"}, weight: bold, align: center, color: notification-error, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  margin: 0 !important;
  padding: 0 !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  color: #FC4040 !important;
  text-align: center !important;
  letter-spacing: normal !important;
  list-style-type: none !important;
  white-space: nowrap !important;
  max-width: 100% !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  font-size: 1rem !important;
  font-weight: 700 !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(p), ::slotted(span), ::slotted(div), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
@media(min-width:480px) {
  :host {
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) !important;
    font-weight: 700 !important;
  }
}

@media(min-width:760px) {
  :host {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) !important;
    font-weight: 700 !important;
  }
}

@media(min-width:1000px) {
  :host {
    font-size: inherit !important;
    font-weight: 700 !important;
  }
}

@media(min-width:1300px) {
  :host {
    font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem) !important;
    font-weight: 700 !important;
  }
}

@media(min-width:1760px) {
  :host {
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) !important;
    font-weight: 700 !important;
  }
}

.root {
  margin: 0;
}"
`;
